# inventory-management-agent

./: .env.example  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
scripts/: seed_database.py  start.sh
src/: __init__.py  config.py  llm.py  main.py
src/agents/: __init__.py  audit_agent.py  operations_agent.py  orchestrator.py  quality_agent.py  replenishment_agent.py  tracking_agent.py
src/api/: __init__.py  dependencies.py  routes.py
src/db/: __init__.py  database.py
src/models/: __init__.py  inventory.py  schemas.py
src/tools/: __init__.py  inventory_tools.py  operations_tools.py  replenishment_tools.py  sensor_tools.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_inventory_tools.py  test_operations_tools.py
